Se cambiaron imagenes del carousel principal

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet"> -->
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -54,9 +54,9 @@
 
 	</head>
 	<body>
-		
+
 	<div class="gtco-loader"></div>
-	
+
 	<div id="page">
 	<nav class="gtco-nav" role="navigation">
 		<div class="gtco-container">
@@ -75,14 +75,14 @@
 					</ul>
 				</div>
 			</div>
-			
+
 		</div>
 	</nav>
 
 	<div id="gtco-hero" class="js-fullheight"  data-section="home">
 		<div class="flexslider js-fullheight">
 			<ul class="slides">
-		   	<li style="background-image: url(images/img_bg_1.jpg);">
+		   	<li style="background-image: url(images/fon1.jpg);">
 		   		<div class="overlay"></div>
 		   		<div class="container">
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
@@ -93,7 +93,7 @@
 		   			</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/img_bg_2.jpg);">
+		   	<li style="background-image: url(images/fon2.jpg);">
 		   		<div class="overlay"></div>
 		   		<div class="container">
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
@@ -104,7 +104,7 @@
 		   			</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/img_bg_3.jpg);">
+		   	<li style="background-image: url(images/fon3.jpg);">
 		   		<div class="overlay"></div>
 		   		<div class="container">
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
@@ -409,7 +409,7 @@
 		</div>
 
 	</div>
-	
+
 	<div id="gtco-blog" data-section="blog">
 		<div class="gtco-container">
 			<div class="row">
@@ -523,7 +523,7 @@
 				</div>
 
 				<div class="row">
-					
+
 					<div class="col-md-3 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 						<div class="feature-center">
 							<span class="icon">
@@ -562,7 +562,7 @@
 
 						</div>
 					</div>
-						
+
 				</div>
 			</div>
 		</div>
@@ -595,7 +595,7 @@
 		</div>
 
 	</div>
-	
+
 
 	<div id="gtco-subscribe">
 		<div class="gtco-container">
@@ -628,7 +628,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div id="gtco-contact" data-section="contact" class="gtco-cover gtco-cover-xs" style="background-image:url(images/img_bg_2.jpg);">
 		<div class="overlay"></div>
 		<div class="gtco-container">
@@ -643,15 +643,15 @@
 			</div>
 		</div>
 	</div>
-	
+
 
 	<footer id="gtco-footer" role="contentinfo">
 		<div class="gtco-container">
-			
+
 			<div class="row copyright">
 				<div class="col-md-12">
 					<p class="pull-left">
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
+						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
 						<small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
 					</p>
 					<p class="pull-right">
@@ -672,7 +672,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -695,4 +695,3 @@
 
 	</body>
 </html>
-
