Se cambia nombre y titulo del proyecto.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Asymmetry &mdash; Free Website Template, Free HTML5 Template by gettemplates.co</title>
+	<title>Curso GIT</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -62,7 +62,7 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-sm-2 col-xs-12">
-					<div id="gtco-logo"><a href="index.html">Asymmetry <em>.</em></a></div>
+					<div id="gtco-logo"><a href="index.html">Curso<em>Git</em></a></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1 main-nav">
 					<ul>
