Se cambia idioma de parrafo 'servicios'

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<div class="row">
 					<div class="col-md-6">
 						<div class="gtco-heading">
-							<h2 class="gtco-left">Services</h2>
+							<h2 class="gtco-left">Servicios</h2>
 							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 						</div>
 					</div>
