Se cambia idioma de parrafo principal de servicios

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 				<div class="row">
 					<div class="col-md-6">
 						<div class="gtco-heading">
-							<h2 class="gtco-left">Services</h2>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<h2 class="gtco-left">Servicios ofrecidos/h2>
+							<p>Ofrecemos servicios de "TI" para pequeñas empresas con precios acordes a su presupuesto.</p>
 						</div>
 					</div>
 				</div>
