Se describen los servicios

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<div class="col-md-6">
 						<div class="gtco-heading">
 							<h2 class="gtco-left">Servicios</h2>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<p>Realizamos el trabajo de marketing digital y programacion web de las empresas.</p>
 						</div>
 					</div>
 				</div>
