--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<div class="row">
 					<div class="col-md-6">
 						<div class="gtco-heading">
-							<h2 class="gtco-left">Servicios ofrecidos/h2>
+							<h2 class="gtco-left">Servicios ofrecidos</h2>
 							<p>Ofrecemos servicios de "TI" para pequeñas empresas con precios acordes a su presupuesto.</p>
 
 						</div>
