--- a/index.html
+++ b/index.html
@@ -238,35 +238,11 @@
 			<div class="gtco-container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-						<h2>Portfolio</h2>
+						<h2>Portafolio</h2>
 						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-4">
-						<a href="images/img_2.jpg" class="gtco-card-item image-popup" title="Project name here.">
-							<figure>
-								<div class="overlay"><i class="ti-plus"></i></div>
-								<img src="images/img_2.jpg" alt="Image" class="img-responsive">
-							</figure>
-						</a>
-					</div>
-					<div class="col-md-4">
-						<a href="images/img_1.jpg" class="gtco-card-item image-popup" title="Project name here.">
-							<figure>
-								<div class="overlay"><i class="ti-plus"></i></div>
-								<img src="images/img_1.jpg" alt="Image" class="img-responsive">
-							</figure>
-						</a>
-					</div>
-					<div class="col-md-4">
-						<a href="images/img_3.jpg" class="gtco-card-item image-popup" title="Project name here.">
-							<figure>
-								<div class="overlay"><i class="ti-plus"></i></div>
-								<img src="images/img_3.jpg" alt="Image" class="img-responsive">
-							</figure>
-						</a>
-					</div>
 
 					<div class="col-md-4">
 						<a href="images/img_4.jpg" class="gtco-card-item image-popup" title="Project name here.">
@@ -326,7 +302,7 @@
 			<div class="gtco-container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-						<h2>Frequently Ask Questions</h2>
+						<h2>Preguntas frecuentes</h2>
 						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 					</div>
 				</div>
@@ -518,7 +494,7 @@
 
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-						<h2>Fun Facts</h2>
+						<h2>Proyectos exitosos</h2>
 						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 					</div>
 				</div>
@@ -572,7 +548,7 @@
 			<div class="gtco-container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-						<h2>Products</h2>
+						<h2>Productos</h2>
 						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 					</div>
 				</div>
@@ -602,7 +578,7 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-					<h2>Subscribe</h2>
+					<h2>Suscribete</h2>
 					<p>Be the first to know about the new templates.</p>
 				</div>
 			</div>
